# titan

./: .gitignore
workbench/: .gitignore  AGENTS.md  README.md  SYSTEM_CAPABILITIES.md  requirements.txt  start.sh
workbench/.chat-history/: ahamkara.json  blitz.json  pegasus.json
workbench/.obsidian/: app.json
workbench/evaluation/: eval-config.yaml
workbench/model-routing/: model-routing.md  routing.yaml
workbench/orchestrator/: __init__.py  agent_messaging.py  chat_task.py  checkpoints.py  cost_tracker.py  github_sync.py  graph.py  hades_client.py  human_channel.py  llm_client.py  model_policy.py  persistence.py  plan_kickoff.py  plan_sequences.py  pr_watcher.py  repair.py  run.py  scheduler.py  spec_to_project.py  state.py  tracing.py  transitions.py  watcher.py  worktree_executor.py
workbench/patterns/: INDEX.md
workbench/policies/: cross-project-context-policy.md  human-approval-policy.md  lean-implementation-policy.md  plan-kickoff-policy.md  queue-state-invariants.md  review-escalation-policy.md  revision-escalation-policy.md  vault-graph-conflict-resolution.md  workbench-repair-playbook.md
workbench/projects/: registry.yaml
workbench/server/: .dockerignore  Dockerfile  README.md  TRANSITION_PROMPT.md  __init__.py  docker-compose.temporal.yml  health.py  orchestrator-server-setup.md  run-worker.sh  (+6 more)
workbench/ui/src-tauri/: Cargo.toml  tauri.conf.json
workbench/ui/src-tauri/capabilities/: default.json
workbench/ui/src-tauri/src/: lib.rs
workbench/ui/src-tauri/src/commands/: cli.rs  files.rs  mod.rs  models.rs  server.rs  system.rs
(+92 files in other folders)
